# catch2-playground

./: CMakeLists.txt  catch_symlink.hpp  hello.cpp  test.c  test.cpp  tests.cpp  unit_tests.cpp  unit_tests2.cpp
.github/workflows/: blah.yml  cmake.yml
source/: string_utils.cpp  string_utils.h
tests/: CMakeLists.txt  other.test.cpp  string_utils.test.cpp
